# 3dspacegame

./: CMakeLists.txt  README.md
data/: asteroid_d.dds  space.arc
include/: pch.h
include/3dspacegame/: game_brick_def.h  game_brick_type.h  game_celestial.h  game_construct.h
include/engine/: data_archive.h  data_file.h  gfx_animation.h  gfx_camera.h  gfx_log.h  gfx_object.h  gfx_particle.h  gfx_primitives.h  gfx_reader.h  gfx_sevbo.h  gfx_shader.h  gfx_skinning.h  gfx_skysphere.h  gfx_texture.h  gfx_window.h  nv_dds.h
macos/: timer.cpp  timer.h
offline_assets/blender/: piston.blend  piston.blend1
offline_assets/nut/: piston.nut
offline_assets/pkg/: 2_2_piston.mdl  2_piston_activate.anim  2_piston_darkblue_d.dds  2_piston_darkblue_d.ddx  piston.arc  piston.lights  piston.mdl  piston.pkg  piston_darkblue_d.ddx  piston_skeleton.skel
offline_assets/psd/: unobtanium.psd
offline_assets/textures/: piston_darkblue_d.dds  stars_d.dds
shaders/: particle.fs  particle.vs  pos_col.fs  pos_col.vs  pos_norm_uv.fs  pos_norm_uv.vs  pos_norm_uv_bone.fs  pos_norm_uv_bone.vs  pos_uv.fs  pos_uv.vs  pos_uv_bb.fs  pos_uv_bb.vs  poscol.fs  poscol.vs  posnormuv.fs  posnormuv.vs  posuv.fs  posuv.vs
src/: archiver.cpp  data_archive.cpp  data_file.cpp  game_celestial.cpp  gfx_animation.cpp  gfx_camera.cpp  gfx_object.cpp  gfx_sevbo.cpp  gfx_shader.cpp  gfx_skinning.cpp  gfx_skysphere.cpp  gfx_texture.cpp  gfx_window.cpp  main.cpp  mmh3.cpp  nv_dds.cpp
tools/src/: animreader.cpp  animreader.h  extract.cpp  log.h  main.cpp  mdl.cpp  mdl.hpp  mdlwriter.cpp  mdlwriter.hpp  osfuncs.h
win32/: timer.cpp  timer.h
